# sc3tools

./: Cargo.toml  README.md
resources/: gamedefs.json
resources/cc/: charset.utf8  compound_chars.map
resources/chlcc/: charset.utf8  compound_chars.map
resources/eeco/: charset.utf8
resources/fdc/: charset.utf8
resources/ia/: charset.utf8
resources/rn/: charset.utf8  compound_chars.map
resources/rnd/: charset.utf8  compound_chars.map
resources/sg0/: CompoundCharacters.tbl  charset.utf8
resources/sge/: charset.utf8  compound_chars.map
resources/sglbp/: charset.utf8  compound_chars.map
resources/sgmde/: charset.utf8  compound_chars.map
src/: coz.rs  format.rs  gamedef.rs  lib.rs  sc3.rs  text.rs
